<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_hive"
        tools:context="dev.banantha.bhive.HiveActivity">
    <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/home_cards_background" app:cardCornerRadius="5dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/CardView_hostname">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/hostname_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_hostname_value" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/home_cards_font"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/hostname_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_hostname_value_title" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/home_cards_font"
                    android:textSize="14sp" android:fontFamily="sans-serif"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/home_cards_background" app:cardCornerRadius="5dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:id="@+id/CardView_cpu_temp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/cpu_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_cpu_temp_value" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/home_cards_font"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/cpu_temp_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_cpu_temp_title" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/home_cards_font"
                    android:textSize="14sp" android:fontFamily="sans-serif"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/home_cards_background" app:cardCornerRadius="5dp"
            android:id="@+id/CardView_cpu_freq"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/CardView_hostname">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/cpu_freq_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_cpu_freq_value" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/home_cards_font"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/cpu_freq_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_cpu_freq_title" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/home_cards_font"
                    android:textSize="14sp" android:fontFamily="sans-serif"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/home_cards_background" app:cardCornerRadius="5dp"
            android:id="@+id/CardView_wifi_strength"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/CardView_cpu_temp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/wifi_strength_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_wifi_strength_value" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/home_cards_font"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/wifi_strength_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_wifi_strength_title" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/home_cards_font"
                    android:textSize="14sp" android:fontFamily="sans-serif"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/sync_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_sync_time"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView_sync_label" android:layout_marginStart="2dp"/>
    <TextView
            android:text="@string/sync_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_sync_label"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:textSize="12sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>